--- a/fonts.css
+++ b/fonts.css
@@ -5,5 +5,5 @@
 
     @font-face {
         font-family: 'Aachen';
-        src: url('https://cdn.jsdelivr.net/gh/Mahmoud-ab/fonts-cdn@main/Sakana.ttf') format('truetype');
+        src: url('https://cdn.jsdelivr.net/gh/Mahmoud-ab/fonts-cdn@main/ae_AlHor.ttf') format('truetype');
     }
