--- a/fonts.css
+++ b/fonts.css
@@ -4,7 +4,7 @@
     }
 
     @font-face {
-        font-family: 'Aachen';
+        font-family: 'ae_AlHor';
         src: url('https://cdn.jsdelivr.net/gh/Mahmoud-ab/fonts-cdn@main/ae_AlHor.ttf') format('truetype');
     }
 
@@ -14,6 +14,6 @@
   color: #99642C !important;
 }
 .header-title-ar {
-  font-family: Aachen !important;
+  font-family: ae_AlHor !important;
   color: #99642C !important;
 }
