--- a/font.css
+++ b/font.css
@@ -13,10 +13,6 @@
 }
 
 .header-title-ar {
- font-family: 'ae_AlHor', sans-serif;
+ font-family: ae_AlHor;
   color: #99642C !important;
-}
-
-span {
- font-family: Sakana;
 }
